# SPDX-License-Identifier: MPL-2.0

[package]
name = "norepi-site-db-hosts"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "control"
path = "src/bin/control.rs"

[dependencies]
bincode = "1.3"
bitflags = "1.3"
bytemuck = { version = "1.12", features = ["derive"] }
chrono = "0.4"
const_panic = "0.2"
ctrlc = "3.2"
dirs = "4.0"
error-stack = "0.2"
interprocess = "1.2"
memmap2 = "0.5"
norepi-site-db-types = { path = "../site-db-types" }
norepi-site-util = { path = "../site-util" }
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.10"
thiserror = "1.0"
tracing = "0.1"
