# SPDX-License-Identifier: MPL-2.0

[package]
name = "norepi-site-db-remote"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "norepi-dbd"
path = "src/bin/server.rs"

[dependencies]
bincode = "1.3"
bitflags = "1.3"
chrono = "0.4"
dirs = "4.0"
norepi-site-db-types = { path = "../site-db-types" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
