# SPDX-License-Identifier: MPL-2.0

[package]
name = "norepi-site-db-remote"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "norepi-dbd"
path = "src/bin/server.rs"

[dependencies]
bitflags = "1.3"
bytemuck = "1.12"
chrono = "0.4"
const_panic = "0.2"
dirs = "4.0"
memmap = "0.7"
norepi-site-db-types = { path = "../site-db-types" }
tracing = "0.1"
