# SPDX-License-Identifier: MPL-2.0

[package]
name = "norepi-site-db-remote"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "norepi-dbd"
path = "src/bin/server.rs"

[dependencies]
bitflags = "1.3"
bytemuck = { version = "1.12", features = ["derive"] }
chrono = "0.4"
const_panic = "0.2"
dirs = "4.0"
interprocess = "1.2"
memmap = "0.7"
norepi-site-db-types = { path = "../site-db-types" }
tracing = "0.1"
