# SPDX-License-Identifier: MPL-2.0

[package]
name = "norepi-site-db"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "norepi-dbd"
path = "src/bin/server.rs"

[dependencies]
bincode = "1.3"
bitflags = "1.3"
chrono = "0.4"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4"
sled = "0.34"
tracing = "0.1"
