# SPDX-License-Identifier: MPL-2.0

[package]
name = "norepi-site-host-db"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "norepi-hosts-server"
path = "src/bin/server.rs"

[[bin]]
name = "norepi-hosts-control"
path = "src/bin/control.rs"

[dependencies]
bincode = "1.3"
bitflags = "1.3"
bytemuck = { version = "1.12", features = ["derive"] }
chrono = "0.4"
const_panic = "0.2"
ctrlc = "3.2"
dirs = { workspace = true }
error-stack = { workspace = true }
interprocess = "1.2"
memmap2 = "0.5"
norepi-site-util = { path = "../util" }
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.10"
thiserror = "1.0"
tracing = { workspace = true }
