# SPDX-License-Identifier: MPL-2.0

[package]
name = "norepi-site-services"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[lib]
path = "src/lib.rs"

# [[bin]]
# name = "norepi-echod"
# path = "src/bin/echo.rs"

[[bin]]
name = "norepi-httpd"
path = "src/bin/http/main.rs"

# [[bin]]
# name = "norepi-smtpd"
# path = "src/bin/smtp.rs"

[dependencies]
chrono = "0.4"
csv = "1.1"
dirs = { workspace = true }
error-stack = { workspace = true }
hyper = { version = "0.14", features = ["server", "tcp", "runtime"] }
hyper-rustls = "0.23"
norepi-site-host-db = { path = "../host-db" }
norepi-site-util = { path = "../util" }
rustls-pemfile = "1.0"
tokio = { workspace = true }
tokio-rustls = "0.23"
tracing = { workspace = true }

[build-dependencies]
generate-norepi-site = { git = "https://github.com/norepimorphism/generate-norepi-site.git" }
